--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@ body{
   font-family: Arial, Helvetica, sans-serif;
   background: url(banner.jpg);
   background-size: 100%;
+  background-repeat: no-repeat;
+  background-color: #dbdada;
 }
 .link-icon {
   text-decoration: inherit;
