--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,9 @@ a:hover{
   font-size: 12px;
   padding-bottom: 30px;
 }
+
+ul.no-bullets {
+  list-style-type: none; /* Remove bullets */
+  padding: 0; /* Remove padding */
+  margin: 0; /* Remove margins */
+}
